--- a/data/Generate Json.ipynb
+++ b/data/Generate Json.ipynb
@@ -128,18 +128,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>441</td>\n",
-       "      <td>LISICYN</td>\n",
-       "      <td>RAGOZIN</td>\n",
-       "      <td>SSSR(ch)</td>\n",
-       "      <td>1934</td>\n",
+       "      <td>431</td>\n",
+       "      <td>EDOCS</td>\n",
+       "      <td>SEMKOV</td>\n",
+       "      <td>CSSR</td>\n",
+       "      <td>1980</td>\n",
        "      <td>I</td>\n",
-       "      <td>g</td>\n",
-       "      <td>1.?</td>\n",
-       "      <td>1-0</td>\n",
+       "      <td>d</td>\n",
+       "      <td>1...?</td>\n",
+       "      <td>0-1</td>\n",
        "      <td>B</td>\n",
        "      <td>C</td>\n",
-       "      <td>r2qr1k1/1pnb1pp1/p1n1p2p/8/P2P3P/B2B1NP1/6P1/R...</td>\n",
+       "      <td>1r4k1/5pp1/qr2p2p/N3Pn2/Q7/2P1b1B1/P5PP/K2R1R2...</td>\n",
        "      <td>[Event \"?\"]\\n[Site \"?\"]\\n[Date \"????.??.??\"]\\n...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -152,14 +152,14 @@
        "1  428    LUKIN   T.CIORGADZE       SSSR  1967     I        d    1.?    1-0   \n",
        "2  429  SAVOSIN      KUZNECOV       SSSR  1975     I        h    1.?    1-0   \n",
        "3  430  TRINGOV         HURME  Malta(ol)  1980     I        g  1...?    0-1   \n",
-       "4  441  LISICYN       RAGOZIN   SSSR(ch)  1934     I        g    1.?    1-0   \n",
+       "4  431    EDOCS        SEMKOV       CSSR  1980     I        d  1...?    0-1   \n",
        "\n",
        "  piece part                                                FEN  \\\n",
        "0     B    C  1qr2rk1/1p1b1ppp/pBnbp3/P5P1/1n2BP1P/1NN2Q2/1P...   \n",
        "1     B    C  1k1qbb1r/1p3p1p/p3pP1p/3pN3/3P4/2RB2P1/PP3P1P/...   \n",
        "2     B    C  r1b1r1k1/1p1n1p2/p1nBp1p1/q2pP1Np/P7/R2B3Q/2P2...   \n",
        "3     B    C  4r1rk/pb2pqbp/1p1p4/5p2/2P2n2/1N2BP2/PPQ3PP/1B...   \n",
-       "4     B    C  r2qr1k1/1pnb1pp1/p1n1p2p/8/P2P3P/B2B1NP1/6P1/R...   \n",
+       "4     B    C  1r4k1/5pp1/qr2p2p/N3Pn2/Q7/2P1b1B1/P5PP/K2R1R2...   \n",
        "\n",
        "                                                 PGN  \n",
        "0  [Event \"?\"]\\n[Site \"?\"]\\n[Date \"????.??.??\"]\\n...  \n",
