--- a/data/Generate Json.ipynb
+++ b/data/Generate Json.ipynb
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'no': 427, 'player1': 'SCHIMID', 'player2': 'HOCHENBERGER', 'place': 'BRD', 'year': 1965, 'class': 'I', 'strategy': 'g', 'move': '1.?', 'result': '1-0', 'piece': 'B', 'part': 'C', 'FEN': '1qr2rk1/1p1b1ppp/pBnbp3/P5P1/1n2BP1P/1NN2Q2/1PP5/1K1R2R1 w - - 0 1', 'PGN': '[Event \"?\"]\\n[Site \"?\"]\\n[Date \"????.??.??\"]\\n[Round \"?\"]\\n[White \"?\"]\\n[Black \"?\"]\\n[Result \"*\"]\\n[SetUp \"1\"]\\n[FEN \"1qr2rk1/1p1b1ppp/pBnbp3/P5P1/1n2BP1P/1NN2Q2/1PP5/1K1R2R1 w - - 0 1\"]\\n\\n1. Bxh7+ Kxh7 2. Ne4 +- (2. Ne4 Be7 3. Nf6+ gxf6 4. Qh5+ Kg8 5. gxf6#) (2. Ne4\\nNd5 3. Rxd5!) (2. Qh5+ Kg8 3. Ne4 Rfd8 4. g6!!) *'}\n"
+      "{'no': 427, 'player1': 'SCHIMID', 'player2': 'HOCHENBERGER', 'place': 'BRD', 'year': '1965', 'class': 'I', 'strategy': 'g', 'move': '1.?', 'result': '1-0', 'piece': 'B', 'part': 'C', 'FEN': '1qr2rk1/1p1b1ppp/pBnbp3/P5P1/1n2BP1P/1NN2Q2/1PP5/1K1R2R1 w - - 0 1', 'PGN': '[Event \"?\"]\\n[Site \"?\"]\\n[Date \"????.??.??\"]\\n[Round \"?\"]\\n[White \"?\"]\\n[Black \"?\"]\\n[Result \"*\"]\\n[SetUp \"1\"]\\n[FEN \"1qr2rk1/1p1b1ppp/pBnbp3/P5P1/1n2BP1P/1NN2Q2/1PP5/1K1R2R1 w - - 0 1\"]\\n\\n1. Bxh7+ Kxh7 2. Ne4 +- (2. Ne4 Be7 3. Nf6+ gxf6 4. Qh5+ Kg8 5. gxf6#) (2. Ne4\\nNd5 3. Rxd5!) (2. Qh5+ Kg8 3. Ne4 Rfd8 4. g6!!) *'}\n"
      ]
     }
    ],
